Resolved Overlap

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@
 }
 
 .VectorP{
-  left: 310px;
   font-style: normal;
   font-weight: normal;
   font-size: 29px;
